  advantage of pre-aggregated data to speed up faceting. (Adrien Grand)

* GITHUB#14417: Support modifying segmentInfos.counter in IndexWriter (Jialiang Guo)

New Features
---------------------
(No changes)

Improvements
---------------------
* GITHUB#14458 : Add an IndexDeletion policy that retains the last N commits. (Owais Kazi)

Optimizations
---------------------
* GITHUB#14418: Quick exit on filter query matching no docs when rewriting knn query. (Pan Guixin)

* GITHUB#14268: PointInSetQuery early exit on non-matching segments. (hanbj)

* GITHUB#14425: KeywordField.newSetQuery() reuses prefixed terms (Mikhail Khludnev)

Bug Fixes
---------------------
(No changes)

Build
---------------------
* Upgrade forbiddenapis to version 3.9.  (Uwe Schindler)

Other
---------------------
* GITHUB#14474: Minor refactor of ComponentTree (Ankit Jain)

======================= Lucene 10.2.0 =======================

API Changes
---------------------
* GITHUB#14069: Added DocIdSetIterator#intoBitSet API to let implementations
  optimize loading doc IDs into a bit set. (Adrien Grand)

* GITHUB#14134: Added Bits#applyMask API to help apply live docs as a mask on a
  bit set of matches. (Adrien Grand)

* GITHUB#14209: Deprecate Operations.union(Automaton,Automaton) and
  concatenate(Automaton,Automaton) in favor of the methods taking List.  (Robert Muir)

* GITHUB#14236: CombinedFieldQuery moved from lucene-sandbox to lucene-core.
  (Adrien Grand)

* GITHUB#14282: Remove redundant field argument from the DocIdSetBuilder constructor that takes a
  PointValues instance. (Luca Cavanna)

* GITHUB#14289: The unused public static DocIdSet#all method has been deprecated.
  (Luca Cavanna)

* GITHUB#14292: The redundant DocIdSet#bits method has been deprecated. (Luca Cavanna)

* GITHUB#14237: Add utils for sandbox facets module for the most common tasks. (Egor Potemkin)

* GITHUB#14312: Added DocIdSetIterator#docIDRunEnd to let iterators tell when